test/corpus/comments.txt
====
comment
====

// This is a comment
/* This is also a comment */
/* this comment /* // /** ends here: */
/**/

a /* dkjfhsdf + */ + b; /* ***** */

---

(source_file 
  (line_comment) 
  (block_comment) 
  (block_comment) 
  (block_comment) 
  (expression_statement 
    (binary_expression 
      (identifier) 
      (block_comment) 
      (identifier))) 
  (block_comment)) 

======================
comments and literals
======================

123;
// comment

---

(source_file
  (expression_statement (decimal_integer_literal))
  (line_comment))
